# Craft-Agent

./: .env  .env.example  .gitignore  Dockerfile.backend  README.md  config.yaml  config.yaml.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh  stop.sh
OKComputer_kimi前端设计/: about.html  design.md  index.html  interaction.md  main.js  outline.md  tools.html
OKComputer_像素风DeepAgent网站/: design.md  index.html  interaction.md  main.js  outline.md
OKComputer_极客博客布局/: about.html  articles.html  design.md  index.html  interaction.md  main.js  outline.md
OKComputer_西高地小狗黑白站/: calendar.html  care.html  design.md  index.html  interaction.md  main.js  outline.md  shop.html
docs/: FAQ.md  configuration_guide.md
source/project_01/: design.md  interaction.md  outline.md
source/project_205919/: about.html  articles.html  index.html  main.js  outline.md
source/project_426542/: about.html  articles.html  index.html  main.js  outline.md
source/project_500289/: about.html  articles.html  index.html  main.js  outline.md
source/project_614622/: about.html  articles.html  index.html  main.js  outline.md
source/project_665307/: about.html  articles.html  index.html  main.js  outline.md
test/: README_test_web_planner.md  crawl.py  test_crawl_tool.py  test_document_design_node.py  test_document_interaction_node.py  test_document_outline_node.py  test_web_planner.py  test_web_source_node.py
text/: test_model_connection.py
web/: .env  .env.example  .gitignore  Dockerfile.frontend  README.md  next.config.js  package.json  pnpm-lock.yaml
(+662 files in other folders)
