[project]
name = "deer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.121.2",
    "html2text>=2024.2.26",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "json-repair>=0.53.0",
    "langchain>=1.0.7",
    "langchain-experimental>=0.4.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "matplotlib>=3.9.0",
    "python-dotenv>=1.2.1",
    "tavily>=1.1.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
